Stopped typewriter animation on mobile

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -58,6 +58,14 @@ header {
 	.header {
 		width: 68%;
 	}
+
+	* {
+		-webkit-animation: none !important;
+		-moz-animation: none !important;
+		-o-animation: none !important;
+		-ms-animation: none !important;
+		animation: none !important;
+	}
 }
 
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1) {
